利用RabbitMQ订单发送和处理

--- a/trading-web/pom.xml
+++ b/trading-web/pom.xml
@@ -177,6 +177,11 @@
             <artifactId>spring-messaging</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.lip.trading</groupId>
+            <artifactId>trading-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <java-version>1.7</java-version>
